sass/main.scss
/**
 * Import some of Bootstrap
 */
$brand-primary: #b61919;
$brand-success: #19b668;
$brand-info: #1968b6;

$font-size-base: 16px;
$line-height-base: 1.8;

@import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap/_variables.scss";
@import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap/mixins";

$font-family-serif: 'Merriweather', serif;
$font-family-base: $font-family-serif;
$text-color: $gray-darker;

$navbar-default-brand-color: $brand-primary;
$navbar-default-brand-hover-color: darken($brand-primary, 15%);


@import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap/normalize";
@import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap/print";

// Core CSS
@import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap/scaffolding";
@import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap/type";
@import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap/grid";
@import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap/forms";
@import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap/buttons";
@import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap/navs";
@import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap/navbar";

// Components
@import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap/input-groups";
@import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap/labels";
@import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap/responsive-embed";

/**
 * Styles
 */
header {
    margin: 0 auto;
    position: relative;
    top: 0;
    left: 0;
    width: 100%;
    height: 300px;
    background: url('../images/header_background.jpg') center center;
    background-size: cover;
    color: white;
    border-bottom: 3px solid $gray-dark;
    border-top: 8px solid $brand-primary;

    .brand {
        font-family: 'Lato', sans-serif;
        position: absolute;
        top: 50%;
        left: 50%;
        transform: translateX(-50%) translateY(-50%);
        text-align: center;
        text-shadow: 2px 2px 3px rgba(0, 0, 0, .6);
    }

    .brand h1 {
        text-transform: uppercase;
        font-size: 4em;
        letter-spacing: .1em;
        font-weight: bold;

        @media (max-width: $screen-sm-min) {
            font-size: 7vw;
        }

        @media (max-width: $screen-xs-min) {
            font-size: 9vw;
        }
    }

    .sub-title {
        font-size: 1.8em;
        font-weight: 300;

        @media (max-width: $screen-sm-min) {
            font-size: 3.5vw;
        }

        @media (max-width: $screen-xs-min) {
            font-size: 4.5vw;
        }
    }

    @media (max-width: $screen-sm-min) {
        height: 250px;
    }
}

h2 {
    text-align: center;
    margin: 20px 15px 30px;
    font-weight: bold;
    color: $brand-primary;
}

h3 {
    font-size: 1.6em;
}

h4 {
    text-align: center;
}

p {
    margin-top: 8px;
    font-weight: 300;
    color: $gray-dark;
}

.map {
    border-radius: $border-radius-base;
}

.map-border {
    padding: 4px;
    background: white;
    box-shadow: 0 0 2px 0 rgba(0, 0, 0, .35);
    border-radius: $border-radius-base;
}

ul {
    padding: 0;

    &.fa-ul i {
        color: $brand-primary;
        line-height: 1.1em;
        font-size: 1.3em;
        left: -2em;
    }
}

.section {
    padding: 15px 0 45px;

    &:nth-child(even) {
        background: $gray-lighter;
    }
}

.card {
    background: white;
    padding: 15px;
    border-radius: $border-radius-base;
    border: 1px solid rgba(0, 0, 0, .5);
    box-shadow: 0 0 1px 0 rgba(0, 0, 0, .35);
}

form {
    background: white;
    padding: 15px;
    border-radius: $border-radius-base;
    border: 1px solid rgba(0, 0, 0, .5);
    box-shadow: 0 0 1px 0 rgba(0, 0, 0, .35);

    .btn-block {
        font-size: 1.3em;
        height: 3em;
    }

    textarea {
        min-width: 100%;
        max-width: 100%;
    }
}

.copyright {
    margin-top: 45px;
    margin-bottom: 0;
}

.testimonial-container {
    .card:not(.current-testimonial) {
        display: none;
    }
}

.margin-top-15 { margin-top: 15px; }

